CSS Styles to Fix Overlap

--- a/src/OnboardingSPA/components/CheckboxTemplate/CheckboxItem/stylesheet.scss
+++ b/src/OnboardingSPA/components/CheckboxTemplate/CheckboxItem/stylesheet.scss
@@ -8,7 +8,7 @@ $main-border-main: var(--nfd-onboarding-primary-alt);
 .checkbox-item {
     margin: 12px;
     padding: 16px;
-    border-radius: 2px;
+    margin-top: 20px;
     background: $main-color-light;
     border: 1px solid $white-offset;
     width: clamp(15rem, 25vw, 35rem);
@@ -91,15 +91,31 @@ $main-border-main: var(--nfd-onboarding-primary-alt);
     }
 
     &--shown {
-        border-radius: 2px;
-        background: rgba($white-offset, 0.2);
-        border: 1px solid rgba($main-color, 0.1);
-        box-shadow: 0px 11px 8px -3px rgba($main-color, 0.20);
+        border-bottom: none;
+        border-radius: 2px 2px 0px 0px;
+        background: rgba($white-offset, 0.8);
+        border-top: 1px solid rgba($main-color, 0.1);
+        border-left: 1px solid rgba($main-color, 0.1);
+        border-right: 1px solid rgba($main-color, 0.1);
     }
 
     &__desc {
-        margin-top: 20px;
+        z-index: 2;
+        padding: 16px;
+        border-top: none;
+        margin-left: 12px;
+        margin-top: -12px;
+        position: absolute;
         font-style: italic;
+        border-radius: 0px 0px 2px 2px;
+        transform-origin: top center;
+        width: clamp(15rem, 25vw, 35rem);
+        background: rgba($white-offset, 0.8);
         font-size: clamp(0.82rem, 2vw, 0.9rem);
+        border-left: 1px solid rgba($main-color, 0.1);
+        border-right: 1px solid rgba($main-color, 0.1);
+        border-bottom: 1px solid rgba($main-color, 0.1);
+        animation: dropdown 400ms ease-in-out forwards;
+        box-shadow: 0px 11px 8px -3px rgba($main-color, 0.20);
     }
 }
